force-app/main/default/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Idst__c</fullName>
        <externalId>true</externalId>
        <label>Idst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>15</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>New_Student_View</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Name__c</columns>
        <columns>Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>New Student View</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>